--- a/src/header.css
+++ b/src/header.css
@@ -91,7 +91,9 @@
     border-radius: 4px; /* 둥근 모서리 */
     text-align: center; /* 텍스트 중앙 정렬 */
 }
-  
+.nav_item li:not(:first-child) {
+  margin-top: 5px; /* 첫 번째 li를 제외한 모든 li에 간격 추가 */
+}
   
   /* 드롭다운 메뉴 활성화 */
   .nav_item:hover li {
